# corrupt_mnist

./: .gitignore  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: docker.yaml  docker_image.yaml  docker_image.yml  tests.yaml
corrupt_mnist/: __init__.py  predict_model.py  train_model.py
corrupt_mnist/data/: dataloader.py  make_dataset.py
corrupt_mnist/models/: model.py
corrupt_mnist/visualizations/: visualize.py
dockerfiles/: predict.dockerfile  trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
tests/: test_data.py  test_model.py
